hard-gists/630df68eb42d881755a3e30343252f74/run.log
=== Docker Run Log for 630df68eb42d881755a3e30343252f74 ===
Started at: Mi 29. Okt 16:28:00 CET 2025

[2025-10-29 16:28:00] START: Running container for 630df68eb42d881755a3e30343252f74
[2025-10-29 16:28:01] SUCCESS: Container 63cd0755d029c6348a5dc8db8f4f7e83380a0d0da6e197b53083112c964b2e91 started for 630df68eb42d881755a3e30343252f74
=== Container logs for 630df68eb42d881755a3e30343252f74 ===
  File "/snippet.py", line 13
    print m.get_weights()
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 630df68eb42d881755a3e30343252f74 ===
[2025-10-29 16:28:03] INFO: Container 63cd0755d029c6348a5dc8db8f4f7e83380a0d0da6e197b53083112c964b2e91 has stopped
